# ask-to-mask

./: .gitignore  CLAUDE.md  LICENSE  README.md  pixi.toml  pyproject.toml
configs/: norms.csv  refine_zarr_example.yaml  train_lora.yaml  train_lora_flux2.yaml  train_lora_flux2_r64.yaml  train_lora_flux2_r64_autonorm.yaml  train_lora_flux2_r64_autonorm_augmented.yaml  train_lora_flux2_r64_autonorm_perimage.yaml
scripts/: molmo_points.py  preview_crop_norms.py
src/ask_to_mask/: __init__.py  __main__.py  cli.py  config.py  model.py  pipeline.py  postprocess.py  zarr_io.py
src/ask_to_mask/agents/: __init__.py  evaluator.py  gen_backend.py  llm_backend.py  loop.py  marker_detection.py  sam3_backend.py  schemas.py  zstack.py
src/ask_to_mask/training/: dataset.py  train.py  zarr_utils.py
